--- a/interface/src/components/styles/FichaTreino.module.css
+++ b/interface/src/components/styles/FichaTreino.module.css
@@ -1,13 +1,19 @@
 :root {
-    --background-color: #333;
-    --text-color: #f0e68c;
-    --input-background-color: #444;
-    --input-border-color: #666;
+    --cinzaAvermelhado: #333;
+    --cinzaMeioEscuro: #444;
+    --cinzaMedio: #666;
+    --amareloClaro: #ffeba7;
+    --cinzaEscuro: #212529;
+    --cinzaAzulado: #343A40;
+    --branco: #FFFFFF;
+    --cinzaClaro: #ccc;
+    --amareloEscuro: #b39f72;
+    --preto: #000000;
 }
 
 body {
-    background-color: var(--background-color);
-    color: var(--text-color);
+    background-color: var(--cinzaAvermelhado);
+    color: var(--amareloClaro);
     font-family: Arial, sans-serif;
 }
 
@@ -15,6 +21,7 @@ body {
     max-width: 900px;
     margin: 0 auto;
     padding: 20px;
+
 }
 
 .header {
@@ -30,7 +37,7 @@ body {
 }
 
 .searchSection label {
-    color: var(--text-color);
+    color: var(--amareloClaro);
 }
 
 .searchSection select,
@@ -38,9 +45,9 @@ body {
 .searchSection button {
     padding: 5px;
     border-radius: 5px;
-    border: 1px solid var(--input-border-color);
-    background-color: var(--input-background-color);
-    color: var(--text-color);
+    border: 1px solid var(--cinzaMedio);
+    background-color: var(--cinzaMeioEscuro);
+    color: var(--amareloClaro);
 }
 
 .searchSection button {
@@ -48,20 +55,21 @@ body {
 }
 
 .nomeAluno, .nomeProfessor {
-    background-color: var(--input-background-color);
+    background-color: var(--cinzaMeioEscuro);
     padding: 10px;
     border-radius: 5px;
     margin-bottom: 20px;
+    color: var(--branco);
 }
 
 .nomeAluno h4, .nomeProfessor h4 {
     margin: 0 0 5px 0;
-    color: var(--text-color);
+    color: var(--amareloClaro);
 }
 
 .nomeAluno h3, .nomeProfessor h3 {
     margin: 0;
-    color: var (--text-color);
+    color: var (--amareloClaro);
 }
 
 .exerciciosSection {
@@ -69,26 +77,53 @@ body {
 }
 
 .exercicio {
-    background-color: var(--input-background-color);
+    background-color: var(--cinzaMeioEscuro);
     padding: 10px;
     border-radius: 5px;
     margin-bottom: 20px;
 }
 
 .exercicio h4 {
-    margin: 0 40px 5px 0;
-    color: var(--text-color);
+    color: var(--amareloBemClaro);
 }
 
 .exercicio h3 {
     margin: 0 0 10px 0;
-    color: var(--text-color);
+    color: var(--amareloBemClaro);
 }
 
 .divs {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: baseline;
+    flex-wrap: wrap;
+    
+}
+.containerDiv {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+}
+.divExercicio {
+    display: flex;
+    align-items: center; /* Alinhar os itens centralizados verticalmente */
+}
+
+.carga {
+    margin-left: 5px; /* Pequeno espaço entre o número e o "Kg" */
+    display: inline-block;
+}
+
+.tabelaListTreino {
+    width: 90%;
+    border: none!important;
+    margin: auto auto;
+}
+
+.tabelaListTreino td {
+    text-align: left;
+    border: none!important;
+    background-color: var(--cinzaMeioEscuro) !important;
 }
 
 /* Responsividade */
