--- a/interface/src/pages/FichaTreino/Ficha.module.css
+++ b/interface/src/pages/FichaTreino/Ficha.module.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     align-items: center;
     background-color: #333;
-    color: #f5f5cc;
+    color: var(--amareloClaro);
     padding: 30px;
     border-radius: 10px;
     max-width: 75%;
@@ -24,7 +24,7 @@
 h1 {
     font-size: 24px;
     margin-bottom: 30px;
-    color: #f5f5cc;
+    color: var(--amareloClaro);
 }
 
 .detalhes {
@@ -52,5 +52,5 @@ strong {
 p {
     margin: 0;
     font-size: 16px;
-    color: #f5f5cc;
+    color: var(--amareloClaro);
 }
