--- a/interface/src/components/styles/StyleCadastro.module.css
+++ b/interface/src/components/styles/StyleCadastro.module.css
@@ -57,7 +57,7 @@
 }
 
 .formStyleEsquerda {
-  width: 49%;
+  width: 98%;
   /* Largura total */
   margin-right: 1%;
   padding: 15px;
@@ -72,6 +72,12 @@
   color: var(--preto);
 
 }
+
+.inputGroup {
+  width: 100%;
+  display: flex;
+}
+
 form{
   width: 70%;
   margin: auto auto;
@@ -85,7 +91,7 @@ form{
 }
 
 .formStyleDireita {
-  width: 49%;
+  width: 98%;
   /* Largura total */
   margin-left: 1%;
 
@@ -152,4 +158,15 @@ form{
 td:nth-child(1):hover {
   text-decoration: underline;
   cursor: pointer;
+}
+
+label {
+  width: 100%;
+  text-align: left;
+}
+
+label p {
+  margin: 0;
+  margin-left: 1%;
+  color: white;
 }
